--- a/Week_08/week8class1work2_sharding/resources/application.yaml
+++ b/Week_08/week8class1work2_sharding/resources/application.yaml
@@ -9,14 +9,14 @@ spring:
       names: ds_0,ds_1
       ds_0:
         driver-class-name: com.mysql.jdbc.Driver
-        jdbc-url: jdbc:mysql://localhost:9316/shop?serverTimezone=UTC&useSSL=false
+        jdbc-url: jdbc:mysql://localhost:3306/shop3?serverTimezone=UTC&useSSL=false
         max-active: 16
         password: 123456
         type: com.zaxxer.hikari.HikariDataSource
         username: root
       ds_1:
         driver-class-name: com.mysql.jdbc.Driver
-        jdbc-url: jdbc:mysql://localhost:9317/shop?serverTimezone=UTC&useSSL=false
+        jdbc-url: jdbc:mysql://localhost:3306/shop4?serverTimezone=UTC&useSSL=false
         max-active: 16
         password: 123456
         type: com.zaxxer.hikari.HikariDataSource
