--- a/Week_09/week9class1work3_rpc/pom.xml
+++ b/Week_09/week9class1work3_rpc/pom.xml
@@ -9,7 +9,7 @@
 <!--		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
 	</parent>
 	<groupId>io.kimmking</groupId>
-	<artifactId>rpcfx</artifactId>
+	<artifactId>week9class1work3_rpc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rpcfx</name>
 	<packaging>pom</packaging>
