--- a/Week_09/week9class1work3_rpc/pom.xml
+++ b/Week_09/week9class1work3_rpc/pom.xml
@@ -49,6 +49,11 @@
 			<version>1.18.16</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.45.Final</version>
+		</dependency>
 	</dependencies>
 
 </project>
