--- a/Week_09/week9class2work1_dubbo_hmily_tcc/pom.xml
+++ b/Week_09/week9class2work1_dubbo_hmily_tcc/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -12,33 +13,21 @@
 	<artifactId>week9class2work1_dubbo_hmily_tcc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rpcfx</name>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<description>dubbo+hmily+tcc</description>
+
+	<modules>
+		<module>biz</module>
+		<module>common</module>
+		<module>account_cny</module>
+		<module>account_usd</module>
+	</modules>
 
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
